# terraform-aws-sce-tf-community

./: .copier-answers.yml  .gitignore  .header.md  .terraform.lock.hcl  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  archives.tf  build.tf  cloudwatch.tf  codebuild.tf  context.tf  core.tf  data.tf  iam.tf  kms.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  s3.tf  sns.tf  ssm.tf  states.tf  variables.tf
.config/: .checkov.yml  .tflint.hcl
.config/functional_tests/: pre-entrypoint-helpers.sh
.config/static_tests/: pre-entrypoint-helpers.sh
assets/: .$Architecture.drawio.bkp  Architecture.drawio  TCE-Architecture.drawio
buildspecs/: sce_runner.yml.tftpl
src/python/: pyproject.toml
src/python/get-state-file-outputs/: get_state_file_outputs.py
src/python/notify-provision-update-result/: notify_provision_update_result.py
src/python/provisioning-operations-handler/: provisioning_operations_handler.py
src/python/sce-terraform-community-layer/python/: setup.py
src/python/sce-terraform-community-layer/python/sce_terraform_community/core/: cli.py  configuration.py  exception.py  service_catalog_facade.py
src/python/sce-terraform-community-layer/python/sce_terraform_community/notify/: errors.py  outputs.py
src/python/terraform-runner/: setup.py
src/python/terraform-runner/terraform_runner/: CommandManager.py  CustomLogger.py  WorkspaceManager.py  __main__.py  artifact_manager.py  override_manager.py
states/: manage_provisioned_product.asl.tftpl
tests/: 01_mandatory.tftest.hcl  02_contract_test.tftest.hcl
(+55 files in other folders)
