[tool.poetry]
name = "service-catalog-engine-for-terraform-community"
version = "1.0.0"
description = "External AWS Service Catalog Engine for Terraform Community Edition"
authors = ["Albert Silva <albsilv@amazon.com>"]
readme = "../../README.md"
packages = [
    {include = "sce_terraform_community", from = "sce-terraform-community-layer/python"}
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.77"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
mypy-boto3 = "^1.34.77"
bandit = "^1.7.8"
python-lambda-local = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]